--- a/motifdjango/motifapp/templates/motifapp/article_read.html
+++ b/motifdjango/motifapp/templates/motifapp/article_read.html
@@ -2,35 +2,102 @@
 
 {% block body %}
 <div class="container">
-    <div class="article-header">
+    <div class="article-header col-md-8">
         <h1 class="article-title">{{ article.title }} </h1>
         <p class="source-description">
             From: {{ article.domain }}
         </p>
-    </div>
 
-    <div class="row">
-        <div class="col-sm-8 article-main">
+        <div class="article-main">
             <div class="article-content">
                 {{ article.body_content|safe }}
             </div>
         </div>
 
-        <div class="col-sm-4 article-side">
-            <p>Summary here</p>
-            <form role="form" method="post"
-                  action="{% url 'motifapp:summary_add' article.id %}" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="form-group">
-                    <div class="col-sm-10">
-                        <input id="summary" name="summary" type="text">
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-default"> Submit </button>
-            </form>
-        </div>
     </div>
 
 
+    <div class="col-md-4 sidebar">
+        <!-- star rating section -->
+        <div class="rating-wrapper">
+            <div class="col-lg-12 rating">
+                <div class="overall-rating col-lg-6">
+                    <div class="creative-rating">4/5</div>
+                    <div class="informative-rating">4/5</div>
+                </div>
+                <div class="user-rating col-lg-6">
+                    <!-- rating submission -->
+                    <a href="#" class="" data-toggle="modal" data-target="#myModal">
+                        <div class="edit-rating-wrapper">
+                        {% if storage_entry.rating_c %}
+                            <div class="creative-rating"> {{ storage_entry.rating_c }}</div>
+                            <div class="informative-rating">{{ storage_entry.rating_i }}</div>
+                        {% else %}
+                            <div class="creative-rating">Rate this</div>
+                            <div class="creative-rating">Article </div>
+                        {% endif %}
+                        </div>
+                    </a>
+                </div>
+                <div class="rating-explain col-lg-6">
+                    <div class="number-of-rating">1,923</div>
+                </div>
+                <div class="rating-explain col-lg-6">
+                    <div class="user-rating-explain">You</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- user's own summary -->
+        <div class="user-summary">
+            <div class="time-cost">
+            <h3>Cost: {{ reading_time }} Minutes <a href="#" data-toggle="tooltip" title="Average readers reach around 200 words per minute with a typical comprehension of 60%."><span class="glyphicon glyphicon-question-sign"></span></a></h3>
+            </div>
+            {% if storage_entry.summary %}
+            <p>Your Summary: {{ storage_entry.summary }}</p>
+            <p>Last edit: {{ storage_entry.summary_modified_date }}</p>
+            <div class="col-md-6">
+                <a href="{% url 'motifapp:summary_edit' article.id %}"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+            </div>
+            <div class="col-md-6">
+                <a href="{% url 'motifapp:summary_delete' article.id %}"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+            </div>
+            {% else %}
+            <a href="{% url 'motifapp:summary_edit' article.id %}">Summarize</a>
+            {% endif %}
+            </form>
+        </div>
+
+        <!-- summaries from other users-->
+        <div class="summary_other">
+            <hr/>
+            <hr/>
+            <p>{{ storage_entry.summary }}</p>
+            <p>by: {{ request.user }}</p>
+            <hr/>
+            <p>{{ storage_entry.summary }}</p>
+            <p>by: {{ request.user }}</p>
+            <hr/>
+            <p>{{ storage_entry.summary }}</p>
+            <p>by: {{ request.user }}</p>
+            <hr/>
+        </div>
+    </div>
 </div>
+</div>
+
+
+{% include 'motifapp/star_rating_template.html' %}
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+
+    //rating form
+    $('a[rel=popover]').popover({
+        html: 'true',
+        placement: 'top'
+    })
+</script>
 {% endblock %}
+
