--- a/motifdjango/motifapp/templates/motifapp/base.html
+++ b/motifdjango/motifapp/templates/motifapp/base.html
@@ -6,14 +6,18 @@
 
     {% load staticfiles %}
     <!-- Bootstrap -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'motifapp/style.css' %}">
 
 </head>
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- logl -->
             <div class="navbar-header">
@@ -28,18 +32,18 @@
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <!-- left side button and logo -->
                 <ul class="nav navbar-nav">
-                    <li><a href="#">button1</a></li>
-                    <li><a href="#">button2</a></li>
-                    <li><a href="#">button3</a></li>
+                    <li><a href="#">Discover</a></li>
                 </ul>
 
                 <!-- right side button and logo -->
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> {{ user }} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">User Profile</a></li>
+                            <li><a href="#">Message</a></li>
+                            <li><a href="#">Profile</a></li>
                             <li><a href="#">Setting</a></li>
+                            <li role="separator" class="divider"></li>
                             <li><a href="{% url 'motifapp:logout' %}">Logout</a></li>
                         </ul>
                     </li>
@@ -52,7 +56,7 @@
                     {% csrf_token %}
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input id="article_url" name="web_url" type="text">
+                            <input class="form-control" id="article_url" name="web_url" type="text" placeholder="Add url">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default"> + </button>
