--- a/motifdjango/motifapp/templates/motifapp/index.html
+++ b/motifdjango/motifapp/templates/motifapp/index.html
@@ -1,13 +1,16 @@
 {% extends 'motifapp/base.html' %}
 
 {% block body %}
-    <h1>My List - login as:{{ user.username }} - id: {{user.id}}</h1>
-
+<div class="container-fluid">
     {% for article in user_saved_article %}
-        <li><a href="{% url 'motifapp:article_read' article.id %}">
-            <p> {{ article.id }} - {{ article.title }} added on:{{ article.storage__add_date}}</p>
-        </a></li>
+    <div class="col-6 col-lg-4">
+        <h3>{{ article.title }}</h3>
+        <p> {{ article.body_content|truncatewords:20|safe }}</p>
+        <p> added on:{{ article.storage__add_date}} </p>
+        <p><a class="btn btn-secondary" href="{% url 'motifapp:article_read' article.id %}"
+              role="button">View details &raquo;</a></p>
+    </div><!--/span-->
     {% endfor %}
-
+</div>
 {% endblock %}
 
