--- a/motifdjango/motifapp/templates/motifapp/base.html
+++ b/motifdjango/motifapp/templates/motifapp/base.html
@@ -10,18 +10,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'motifapp/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'stylesheet/style.css' %}">
 
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <!-- top nav bar -->
+    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container-fluid">
-            <!-- logl -->
+            <!-- logo -->
             <div class="navbar-header">
-                <a href="{% url 'motifapp:index' %}" class="navbar-brand">MOTIF</a>
+                <a href="{% url 'motifapp:index' %}" class="navbar-brand">motif</a>
                 <button type="botton" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -33,6 +34,7 @@
                 <!-- left side button and logo -->
                 <ul class="nav navbar-nav">
                     <li><a href="#">Discover</a></li>
+                    <li><a href="#">Readers</a></li>
                 </ul>
 
                 <!-- right side button and logo -->
@@ -41,7 +43,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> {{ user }} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Message</a></li>
-                            <li><a href="#">Profile</a></li>
+                            <li><a href="/profile/{{ user }}">Profile</a></li>
                             <li><a href="#">Setting</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'motifapp:logout' %}">Logout</a></li>
@@ -49,9 +51,8 @@
                     </li>
                 </ul>
 
-
-                <!-- add article -->
-                <form class="navbar-form navbar-right" role="form" method="post"
+                <!-- add article with web_url -->
+                <form class="navbar-form navbar-right" role="form" method="post" value=""  autocomplete="off"
                       action="{% url 'motifapp:article_add' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
@@ -62,9 +63,9 @@
                     <button type="submit" class="btn btn-default"> + </button>
                 </form>
             </div>
-
         </div>
     </nav>
+    <!-- nav bar end -->
 {% block body %}
 {% endblock %}
 </body>
